# climate-risk-signal-engine

./: .env.example  README.md  docker-compose.yml  pyproject.toml
config/: manifest.json
configs/: project.json
data/: README.md
demo/: index.html  styles.css
docs/: architecture.md  deployment.md  index.html  runbook.md
src/app/web/: index.html
tests/: test_smoke.py
