
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climate-risk-signal-engine"
version = "0.1.0"
description = "Aggregate exposure, disruption, and volatility signals into a clear climate risk scorecard."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
